<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.startup.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="24dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="195dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="606dp"
                android:layout_height="284dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/logo_application"
                app:layout_constraintBottom_toTopOf="@+id/loginCardView"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/loginCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImageView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="300dp"
                    android:minWidth="160dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginTop="16dp"

                        android:hint="@string/email"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/stroke_color"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"
                            app:hintTextColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:hint="@string/password"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/stroke_color"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_field">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"
                            app:hintTextColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:hint="@string/confirm_password"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/stroke_color"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password_field">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"
                            app:hintTextColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:hint="@string/first_name"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/stroke_color"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/confirm_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"
                            app:hintTextColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:hint="@string/last_name"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/stroke_color"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/first_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"
                            app:hintTextColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:hint="@string/address"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/stroke_color"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/last_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/homeAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"
                            app:hintTextColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:hint="@string/phone_number"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/stroke_color"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"
                            app:hintTextColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/choose_role"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_role"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="10pt"
                        android:layout_marginTop="16dp" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="16dp">

                        <RadioButton
                            android:id="@+id/radioButtonOwner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/radio_owner"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/login_button" />

                        <RadioButton
                            android:id="@+id/radioButtonGuest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_guest"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/login_button" />

                    </RadioGroup>

                    <Button
                        android:id="@+id/registerButton"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/login_button"
                        android:fontFamily="@font/segoe_bold"
                        android:minWidth="300dp"
                        android:padding="15dp"
                        android:text="@string/register_button"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/have_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/have_account"
                        android:gravity="center"
                        android:background="@drawable/textview_hover"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>