<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.startup.LogInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="606dp"
                android:layout_height="284dp"
                android:layout_marginTop="1dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo_application"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toTopOf="@+id/loginCardView"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/loginCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:maxWidth="500dp"
                android:backgroundTint="@color/white"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@+id/logoImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="160dp"
                    android:maxWidth="300dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:padding="12dp"
                        app:boxStrokeColor="@color/stroke_color"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:hintTextColor="@color/black"
                        android:layout_marginTop="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"
                            app:hintTextColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"

                        android:hint="@string/password"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/stroke_color"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_field">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"
                            app:hintTextColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:minWidth="300dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/segoe_bold"
                        android:backgroundTint="@color/login_button"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:padding="15dp"
                        android:text="@string/login_button"/>

                    <TextView
                        android:id="@+id/forgotPasswordTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:background="@drawable/textview_hover"
                        android:layout_marginTop="16dp" />

                    <TextView
                        android:id="@+id/sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:gravity="center"

                        android:textColor="@color/black"
                        android:background="@drawable/textview_hover"
                        android:layout_marginTop="16dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>